tests/suite/fail/generated/stdlib_import/fail_stdlib__no__such__path.ny.ny
//~ ERROR import not found
import "stdlib/no/such/path.ny"
fn main() {
    print(0)
}
